--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 # Only exists if Bazel was run
 /bazel-out
 
-# dependencies
-/node_modules
-
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
@@ -20,7 +17,6 @@ speed-measure-plugin.json
 .classpath
 .c9/
 *.launch
-.settings/
 *.sublime-workspace
 
 # IDE - VSCode
@@ -44,3 +40,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+node_modules
